zeit.imp changes
================

0.12.1 (unreleased)
+++++++++++++++++++

- Do no longer try to create 0x0 images.

- Sliders have a much smaller zone of action to allow finer control over the
  result (#4969).


0.12.0 (2010-08-09)
+++++++++++++++++++

- Fix tests after product config changes in zeit.cms (#7549).

- Für Selenium-Tests wird nun ``gocept.selenium`` verwendet (#7549).


0.11.0 (2010-05-03)
+++++++++++++++++++

- Es ist jetzt möglich eine leere Rahmen-Datei (colors.xml) zu haben ohne, dass
  IMP kaputt geht (#6974).

- Using versions from the ZTK.


0.10.0 (2009-11-25)
++++++++++++++++++

- Das Bild kann nicht mehr außerhalb der Schnittmaske verschoben oder
  zugeschnitten werden (#4972).


0.9.0 (2009-11-04)
++++++++++++++++

- Der Bild-Bereich kann gezoomt werden, damit auch sehr große Masken passen.


0.8 (2009-09-04)
++++++++++++++++

- Palette-Images (#4980) und CMYK-Images (#6171) werden nach RGB konvertiert.

0.7.2 (2009-08-11)
++++++++++++++++++

- Skalieren von großen Bildern funktioniert jetzt zuverlässig (#5957).

0.7.1 (2009-08-11)
++++++++++++++++++

- Einstellungsbreich bekommt eine Scrollbar, wenn der Bildschirm zu klein ist.

0.7 (2009-07-20)
++++++++++++++++

- Umbauten um IMP mehrfach verwenden zu können (z.B. in der Bildergalerie).

0.6.1 (2009-05-15)
++++++++++++++++++

- Alle ``test.py`` nach ``tests.py`` umbenannt.

- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

0.6 (2009-04-06)
++++++++++++++++

- Höhere Qualität beim Speichern (80%, two-pass).

0.5 (2009-03-03)
++++++++++++++++

- Bei Grau-Bildern kann jetzt ein Rahmen eingefügt werden. Bei einem farbigen
  Rahmen wird dieser in den entsprechenden Grauwert umgewandelt.

0.4 (2009-02-20)
++++++++++++++++

- Es stehen mehrere Rahmenfarben zur Auswahl, die per XML-Datei anpassbar sind
  (colors.xml).
- Markierung auf den Slidern entfernt.
- Slider zeigen jetzt einen Wertebereich von -100 bis 100.
- Reset-Knopf für die Filter.

0.3 (2009-02-05)